# rain

./: .gitignore  Dockerfile  README.md  client.json  server.toml
client/: config.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
client/backup/: Header.bak.tsx  Video.bak2.tsx  Video.bak3.tsx  video.bak.tsx
client/src/: http.ts  index.css  main.tsx
client/src/components/: Header.tsx  VideoCard.tsx
client/src/pages/: About.tsx  Main.tsx  NotFound.tsx  Upload.tsx  Video.tsx
server/: Cargo.toml
server/src/: handlers.rs  main.rs  structs.rs
server/src/routes/: app.rs  app_assets.rs
server/src/routes/content/: m3u8.rs  root.rs  segment.rs
server/src/routes/data/: query.rs  root.rs  thumbnail_lg.rs  thumbnail_sm.rs
