[package]
name = "server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
mime_guess = "2.0.4"
colored = "2"
uuid = { version = "1.2.2", features = ["v4"] }
tower-http = { version = "0.3.0", features = ["limit", "cors"] }
toml = "0.5.9"
